plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.plugin.serialization'
    id 'kotlin-kapt'
    id 'dagger.hilt.android.plugin'
    id 'org.jetbrains.kotlin.plugin.compose' version '2.0.21'
}

android {
    namespace 'com.fetch.lynnwilliam'
    compileSdk 35

    defaultConfig {
        applicationId "com.fetch.lynnwilliam"
        minSdk 26
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "com.fetch.lynnwilliam.TestRunner"
        testInstrumentationRunnerArguments clearPackageData: 'true'
        vectorDrawables {
            useSupportLibrary true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField 'String', 'FETCH_URL', '"https://fetch-hiring.s3.amazonaws.com/hiring.json"'
        }

        debug{  //maybe you want to use a test subdomain ??
            buildConfigField 'String', 'FETCH_URL', '"https://fetch-hiring.s3.amazonaws.com/hiring.json"'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = '17' //was 1.8
    }
    buildFeatures {
        compose true
        buildConfig = true
    }
    composeOptions {
        kotlinCompilerExtensionVersion '2.0.21'
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }

    kapt {
        javacOptions {
            // Open all packages accessed by kapt to eliminate IllegalAccessError
            option("-J--add-opens", "java.base/java.util=ALL-UNNAMED")
            option("-J--add-opens", "java.base/java.lang=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
            option("-J--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
        }
    }
}

dependencies {
        implementation "androidx.core:core-ktx:$ktxcore"
        implementation "androidx.lifecycle:lifecycle-runtime-ktx:$ktx_runtime"
        implementation "androidx.activity:activity-compose:$compose_version"
        implementation "androidx.compose.ui:ui:$compose_ui_version"
        implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
        implementation "androidx.compose.material:material:$material_version"

        implementation "androidx.compose.runtime:runtime-livedata:$livedata_version"
        implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$viewmodel_version"

        // OkHttp client
        implementation("com.squareup.okhttp3:okhttp:$okhttp_version")
        implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$kotlin_version"

        // Test libraries
        testImplementation "junit:junit:$junit_version"
        testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$cocoutines_version" // Only one correct version

        // Android Test libraries
        androidTestImplementation "androidx.test.ext:junit:$junit_espresso"
        androidTestImplementation "androidx.test.espresso:espresso-core:$expresso_core"
        androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"


        androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
        kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"


        // Debug libraries
        debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
        debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"

        //Hilt DI
        implementation 'com.google.dagger:hilt-android:2.54'
        kapt 'com.google.dagger:hilt-android-compiler:2.54'
        implementation "androidx.hilt:hilt-compiler:1.0.0"
}